# softbd

./: .gitignore  Cargo.toml  README.md  index.html
src/: bin.rs  common.rs  constr.rs  input.rs  lib.rs  main.rs  movement.rs  player.rs  softbody.rs  ui.rs
