[package]
name = "mygame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3"}
avian2d = "0.2.1"
bevy-inspector-egui = "0.30.0"
wasm-bindgen = "0.2"

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "mylib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mybin"
path = "src/bin.rs"
